examples/mood/tests/evaluate/expression_path_from_function.mood.expected
-----------------
INPUT
----------------- 
fn func(): f64 {
    10_f64
}

pub fn test(): f64 {
    func::Bar
}
-----------------
OUTPUT
-----------------
Error: Expected enum, got function:
 --> expression_path_from_function.mood:6:5

  | pub fn test(): f64 {
6 |     func::Bar
  |     ^^^^ Expected an enum.
  | }
