examples/mood/tests/evaluate/expression_path_from_function.mood
fn func(): f64 {
    10_f64
}

pub fn test(): f64 {
    func::Bar
}